# QtFrameworkProjects

./: .gitignore  CMakeLists.txt  CONTRIBUTING.md  README.md
core/: CMakeLists.txt
core/threading/: CMakeLists.txt  managedtask.cpp  managedtask.h  threadmanager.cpp  threadmanager.h
